Re-add GitHub social icon in footer.

--- a/app/views/partials/_footer.haml
+++ b/app/views/partials/_footer.haml
@@ -5,6 +5,10 @@
       = link_to "Neil Johari", "https://github.com/neiljohari/"
       and
       = link_to "Kailan Blanks", "https://github.com/kailan/"
+    %ul.social
+      %li
+        %a{:href => "https://github.com/Syosset/syosset"}
+          = fa_icon 'github'
     %ul.actions
       %li.translate{'data-turbolinks-permanent': true}
         .btn-loader#translate_trigger
