--- a/app/views/permissions/targets/index.haml
+++ b/app/views/permissions/targets/index.haml
@@ -3,8 +3,8 @@
   %li= link_to @policy.name, policy_path(@policy)
   %li.active Targets
 
-  = link_to new_policy_target_path(@policy), class: 'pull-right' do
-    = fa_icon 'bullseye'
-    Create Target
-
+%h1
+  Targets
+  .pull-right
+    = render 'partials/modtools'
 = render partial: 'targets', collection: @targets
