--- a/app/views/authorizations/edit.haml
+++ b/app/views/authorizations/edit.haml
@@ -1,2 +1,8 @@
-%h1 Edit Authorization
+%ol.breadcrumb
+  %li= link_to 'Users', users_path
+  %li= link_to @user.name, user_path(@user)
+  %li= link_to 'Authorizations', edit_user_path(@user)
+  %li.active
+    = @authorization.provider
+
 = render 'form'
