--- a/app/views/authorizations/new.haml
+++ b/app/views/authorizations/new.haml
@@ -1,2 +1,7 @@
-%h1 Create Authorization
+%ol.breadcrumb
+  %li= link_to 'Users', users_path
+  %li= link_to @user.name, user_path(@user)
+  %li= link_to 'Authorizations', edit_user_path(@user)
+  %li.active Create Authorization
+
 = render 'form'
