--- a/app/views/welcome/landing/_quicklinks.haml
+++ b/app/views/welcome/landing/_quicklinks.haml
@@ -1,23 +1,23 @@
 .landing-quicklinks.panel.panel-sosset
   .panel-heading
-    = link_to "Quick Links", links_path
+    = link_to t('links.title'), links_path
     %small
       = link_to links_path do
         = fa_icon 'ellipsis-v'
-        Click to see all
+        = t('links.see_more')
   .panel-body
     %p
       %a{:href => "https://ic.syosset.k12.ny.us/"}
         = fa_icon 'graduation-cap'
-        Parent and Teacher Portal
+        = t('links.default.portal')
     %p
       %a{:href => "http://portal.office365.com/"}
         = fa_icon 'envelope'
-        Teacher Email
+        = t('links.default.email')
     %p
       %a{:href => "http://www.syossetschools.org/Calendar/Default.aspx?period=monthgrid"}
         = fa_icon 'calendar'
-        District Calendar
+        = t('links.default.calendar')
     - @links.each do |link|
       %p
         = link_to link[:target] do
