--- a/app/views/welcome/home/_announcements.haml
+++ b/app/views/welcome/home/_announcements.haml
@@ -1,7 +1,7 @@
 %section.news
   %h1.section-heading.text-highlight
     %span.line
-      = link_to t('.announcements'), announcements_path
+      = link_to t('announcements.title'), announcements_path
       %small
         = link_to announcements_path do
           = fa_icon 'ellipsis-v'
