Split Descriptable into Summarizable and Publishable, and migrate old content to markdown Closes #123

--- a/app/views/activities/index.haml
+++ b/app/views/activities/index.haml
@@ -23,5 +23,5 @@
             %tr
               %td= link_to activity.name, activity
               %td= activity.type.to_s.humanize
-              %td= activity.short_description
+              %td= activity.summary
     = paginate @activities, theme: 'tb3'
