--- a/app/views/announcements/_form.haml
+++ b/app/views/announcements/_form.haml
@@ -6,10 +6,9 @@
   .form-group
     = f.label :name
     = f.text_field :name, placeholder: "Name", class: "form-control"
-  - if !@announcement.content.blank? && Current.user.super_admin
-    .form-group
-      = f.label :content, "OLD CONTENT"
-      = f.text_area :content, rows: 10, class: "form-control", disabled: true
+  .form-group
+    = f.label :summary
+    = f.text_field :summary, placeholder: "Short Description", class: "form-control"
   .form-group
     = f.label :markdown
     ~ f.text_area :markdown, placeholder: "Content", rows: 10, class: "form-control markdown"
