--- a/app/views/courses/_form.haml
+++ b/app/views/courses/_form.haml
@@ -11,12 +11,8 @@
     = f.label :course_id
     = f.number_field :course_id, placeholder: "Course ID", class: "form-control"
   .form-group
-    = f.label :short_description
-    = f.text_field :short_description, placeholder: "Short Description", class: "form-control"
-  - if !@course.content.blank? && Current.user.super_admin
-    .form-group
-      = f.label :content, "OLD CONTENT"
-      = f.text_area :content, rows: 10, class: "form-control", disabled: true
+    = f.label :summary
+    = f.text_field :summary, placeholder: "Short Description", class: "form-control"
   .form-group
     = f.label :markdown
     ~ f.text_area :markdown, placeholder: "Content", rows: 10, class: "form-control markdown"
