--- a/app/views/activities/show.haml
+++ b/app/views/activities/show.haml
@@ -15,30 +15,32 @@
       .courses-wrapper.col-md-8.col-sm-7
         = @markdown.render(@activity.markdown).html_safe
       %aside.page-sidebar.col-md-3.col-md-offset-1.col-sm-4.col-sm-offset-1
-        %section.widget.has-divider
-          %h3.title
-            = fa_icon "bell"
-            = link_to "Announcements", announcements_path(activity_id: @activity.id)
-          %ul.rankable.list-group
-            - @activity.announcements.by_priority.limit(5).each do |announcement|
-              = content_tag_for(:li, announcement, class: "list-group-item") do
-                - if current_holder.can?(:edit, announcement)
-                  %i.handle.fa.fa-sort{"aria-hidden" => "true"}
-                = link_to announcement.name.truncate(38), announcement
-        %section.widget.has-divider
-          %h3.title
-            = fa_icon "link"
-            = link_to "Links", links_path(activity_id: @activity.id)
-          %ul.rankable.list-group
-            - @activity.links.by_priority.limit(5).each do |link|
-              = content_tag_for(:li, link, class: "list-group-item") do
-                - if current_holder.can?(:edit, link)
-                  %i.handle.fa.fa-sort{"aria-hidden" => "true"}
-                  = link_to link_path(link), method: :delete, data: { confirm: 'Are you sure?' } do
-                    = fa_icon "times"
-                  = link_to new_escalation_request_path(link_id: link) do
-                    - if link.escalated?
-                      = fa_icon "star"
-                    - else
-                      = fa_icon "star-o"
-                = link_to link.name, link.target
+        - unless @activity.announcements.empty?
+          %section.widget.has-divider
+            %h3.title
+              = fa_icon "bell"
+              = link_to "Announcements", announcements_path(activity_id: @activity.id)
+            %ul.rankable.list-group
+              - @activity.announcements.by_priority.limit(5).each do |announcement|
+                = content_tag_for(:li, announcement, class: "list-group-item") do
+                  - if current_holder.can?(:edit, announcement)
+                    %i.handle.fa.fa-sort{"aria-hidden" => "true"}
+                  = link_to announcement.name.truncate(38), announcement
+        - unless @activity.links.empty?
+          %section.widget.has-divider
+            %h3.title
+              = fa_icon "link"
+              = link_to "Links", links_path(activity_id: @activity.id)
+            %ul.rankable.list-group
+              - @activity.links.by_priority.limit(5).each do |link|
+                = content_tag_for(:li, link, class: "list-group-item") do
+                  - if current_holder.can?(:edit, link)
+                    %i.handle.fa.fa-sort{"aria-hidden" => "true"}
+                    = link_to link_path(link), method: :delete, data: { confirm: 'Are you sure?' } do
+                      = fa_icon "times"
+                    = link_to new_escalation_request_path(link_id: link) do
+                      - if link.escalated?
+                        = fa_icon "star"
+                      - else
+                        = fa_icon "star-o"
+                  = link_to link.name, link.target
