--- a/app/views/departments/show.haml
+++ b/app/views/departments/show.haml
@@ -60,41 +60,43 @@
                   = "Click to see #{excess_courses} more courses"
 
       %aside.page-sidebar.col-md-3.col-md-offset-1.col-sm-4.col-sm-offset-1
-        %section.widget.has-divider
-          %h3.title
-            = fa_icon "bell"
-            = link_to "Announcements", announcements_path(department_id: @department.id)
-          %ul.rankable.list-group
-            - @department.announcements.by_priority.limit(5).each do |announcement|
-              = content_tag_for(:li, announcement, class: "list-group-item") do
-                - if current_holder.can?(:edit, announcement)
-                  %i.handle.fa.fa-sort{"aria-hidden" => "true"}
-                = link_to announcement.name.truncate(38), announcement
-            - if @department.announcements.by_priority.count > 5
-              %li.list-group-item.shaded
-                = link_to announcements_path(department_id: @department.id) do
-                  Click to see all announcements
-        %section.widget.has-divider
-          %h3.title
-            = fa_icon 'link'
-            = link_to "Links", links_path(department_id: @department.id)
-          %ul.rankable.list-group
-            - @department.links.by_priority.limit(5).each do |link|
-              = content_tag_for(:li, link, class: "list-group-item") do
-                - if current_holder.can?(:edit, link)
-                  %i.handle.fa.fa-sort{"aria-hidden" => "true"}
-                  = link_to link_path(link), method: :delete, data: { confirm: 'Are you sure?' } do
-                    = fa_icon 'times'
-                  = link_to new_escalation_request_path(link_id: link) do
-                    - if link.escalated?
-                      = fa_icon 'star'
-                    - else
-                      = fa_icon 'star-o'
-                = link_to link.name, link.target
-            - if @department.links.by_priority.count > 5
-              %li.list-group-item.shaded
-                = link_to links_path(department_id: @department.id) do
-                  Click to see all links
+        - unless @department.announcements.empty?
+          %section.widget.has-divider
+            %h3.title
+              = fa_icon "bell"
+              = link_to "Announcements", announcements_path(department_id: @department.id)
+            %ul.rankable.list-group
+              - @department.announcements.by_priority.limit(5).each do |announcement|
+                = content_tag_for(:li, announcement, class: "list-group-item") do
+                  - if current_holder.can?(:edit, announcement)
+                    %i.handle.fa.fa-sort{"aria-hidden" => "true"}
+                  = link_to announcement.name.truncate(38), announcement
+              - if @department.announcements.by_priority.count > 5
+                %li.list-group-item.shaded
+                  = link_to announcements_path(department_id: @department.id) do
+                    Click to see all announcements
+        - unless @department.links.empty?
+          %section.widget.has-divider
+            %h3.title
+              = fa_icon 'link'
+              = link_to "Links", links_path(department_id: @department.id)
+            %ul.rankable.list-group
+              - @department.links.by_priority.limit(5).each do |link|
+                = content_tag_for(:li, link, class: "list-group-item") do
+                  - if current_holder.can?(:edit, link)
+                    %i.handle.fa.fa-sort{"aria-hidden" => "true"}
+                    = link_to link_path(link), method: :delete, data: { confirm: 'Are you sure?' } do
+                      = fa_icon 'times'
+                    = link_to new_escalation_request_path(link_id: link) do
+                      - if link.escalated?
+                        = fa_icon 'star'
+                      - else
+                        = fa_icon 'star-o'
+                  = link_to link.name, link.target
+              - if @department.links.by_priority.count > 5
+                %li.list-group-item.shaded
+                  = link_to links_path(department_id: @department.id) do
+                    Click to see all links
 
 :javascript
   $(document).on('turbolinks:load', function() {
