add club name to copyright

--- a/app/views/partials/_footer.haml
+++ b/app/views/partials/_footer.haml
@@ -1,7 +1,9 @@
 %footer.footer
   .container
     %small.copyright
-      Made by
+      Made by the
+      = succeed "," do
+        = link_to "Website Development Club", "/activities/web-development-club"
       = link_to "Neil Johari", "https://github.com/neiljohari/"
       and
       = link_to "Kailan Blanks", "https://github.com/kailan/"
@@ -15,3 +17,23 @@
           = fa_icon 'google'
           Translate
         #google_translate_element
+-# ---Little Documentation
+-#
+-# = succeed "...str" do
+-#   = ...tags
+-# place ...str immediately after ...tags without return
+-#          when parsed to HTML
+-#
+-# ----SAMPLE----
+-# display "Begin text link1, link2, and link 3. End text"
+-#          excluding commas or the period as the link
+-# 
+-# Begin text
+-# = succeed "," do
+-#   = link_to "link1", "URL"[,[...]]
+-# = succeed "," do
+-#   = link_to "link2", "URL"
+-# and
+-# = succeed "." do
+-#   = link_to "link3", "URL"
+-# End text
