Upgrade to Bootstrap 4.1 and FontAwesome 5.3
This commit removes the College Green theme as we have implemented most of our UI internally now.

--- a/app/views/partials/_footer.haml
+++ b/app/views/partials/_footer.haml
@@ -8,10 +8,10 @@
     %ul.social
       %li
         %a{:href => "https://github.com/Syosset/syosset"}
-          = fa_icon 'github'
+          = fa_brand_icon 'github'
     %ul.actions
       %li.translate{'data-turbolinks-permanent': true}
         .btn-loader#translate_trigger
-          = fa_icon 'google'
+          = fa_brand_icon 'google'
           Translate
         #google_translate_element
