--- a/app/assets/stylesheets/icons.scss
+++ b/app/assets/stylesheets/icons.scss
@@ -1,13 +1,29 @@
-@import "font-awesome/scss/font-awesome";
+$fa-font-path: '@fortawesome/fontawesome-free/webfonts';
 
 @font-face {
-  font-family: 'FontAwesome';
-  src: asset-url('font-awesome/fonts/fontawesome-webfont.eot');
-  src: asset-url('font-awesome/fonts/fontawesome-webfont.eot') format('embedded-opentype'),
-       asset-url('font-awesome/fonts/fontawesome-webfont.woff2') format('woff2'),
-       asset-url('font-awesome/fonts/fontawesome-webfont.woff') format('woff'),
-       asset-url('font-awesome/fonts/fontawesome-webfont.ttf') format('truetype'),
-       asset-url('font-awesome/fonts/fontawesome-webfont.svg') format('svg');
-  font-weight: normal;
+  font-family: 'Font Awesome 5 Free';
   font-style: normal;
+  font-weight: 900;
+  src: asset-url('#{$fa-font-path}/fa-solid-900.eot');
+  src: asset-url('#{$fa-font-path}/fa-solid-900.eot?#iefix') format('embedded-opentype'),
+  asset-url('#{$fa-font-path}/fa-solid-900.woff2') format('woff2'),
+  asset-url('#{$fa-font-path}/fa-solid-900.woff') format('woff'),
+  asset-url('#{$fa-font-path}/fa-solid-900.ttf') format('truetype'),
+  asset-url('#{$fa-font-path}/fa-solid-900.svg#fontawesome') format('svg');
 }
+
+@font-face {
+  font-family: 'Font Awesome 5 Brands';
+  font-style: normal;
+  font-weight: normal;
+  src: asset-asset-url('#{$fa-font-path}/fa-brands-400.eot');
+  src: asset-url('#{$fa-font-path}/fa-brands-400.eot?#iefix') format('embedded-opentype'),
+  asset-url('#{$fa-font-path}/fa-brands-400.woff2') format('woff2'),
+  asset-url('#{$fa-font-path}/fa-brands-400.woff') format('woff'),
+  asset-url('#{$fa-font-path}/fa-brands-400.ttf') format('truetype'),
+  asset-url('#{$fa-font-path}/fa-brands-400.svg#fontawesome') format('svg');
+}
+
+@import "@fortawesome/fontawesome-free/scss/fontawesome";
+@import "@fortawesome/fontawesome-free/scss/solid";
+@import "@fortawesome/fontawesome-free/scss/brands";
