--- a/app/assets/stylesheets/imports.scss
+++ b/app/assets/stylesheets/imports.scss
@@ -2,14 +2,12 @@
 @import "flexslider";
 @import "jquery-ui";
 
+@import "bootstrap/scss/bootstrap";
 @import "eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker";
 @import "fontawesome-iconpicker/dist/css/fontawesome-iconpicker";
 @import "simplemde/dist/simplemde.min";
-@import "bootstrap-sass/assets/stylesheets/bootstrap-sprockets";
-@import "bootstrap-sass/assets/stylesheets/bootstrap";
-@import "college_green/styles-red";
 @import "jquery-tags-input/dist/jquery.tagsinput.min";
 
 .field_with_errors {
-  @extend .has-error;
+  @extend .is-invalid;
 }
