--- a/app/views/peek/views/_git.haml
+++ b/app/views/peek/views/_git.haml
@@ -1,4 +1,4 @@
-= fa_icon 'code-fork', class: 'peek-icon'
+= fa_icon 'code-branch', class: 'peek-icon'
 .bucket
   %span.current-branch.css-truncate.expandable
     %span.current-branch-name.css-truncate-target
