Update homepage modules to use BS4 cards

--- a/app/views/welcome/home/_announcements.haml
+++ b/app/views/welcome/home/_announcements.haml
@@ -1,26 +1,22 @@
-%section.news
-  %h1.section-heading.text-highlight
-    %span.line
-      = link_to t('announcements.title'), announcements_path
-      %small
-        = link_to announcements_path do
-          = fa_icon 'ellipsis-v'
-          Click to see all
-  .carousel-controls
-    %a.prev{"data-slide" => "prev", :href => "#news-carousel"}
-      = fa_icon 'caret-left'
-    %a.next{"data-slide" => "next", :href => "#news-carousel"}
-      = fa_icon 'caret-right'
-  .section-content.clearfix
+.card
+  .card-header.d-flex.bg-syosset.text-white
+    = t('announcements.title')
+    .carousel-controls.ml-3
+      %a.prev{'data-slide': "prev", href: '#news-carousel'}
+        = fa_icon 'caret-left'
+      %a.next{'data-slide': 'next', href: '#news-carousel'}
+        = fa_icon 'caret-right'
+  .card-body
     #news-carousel.news-carousel.carousel.slide
       .carousel-inner
         - @announcements.in_groups_of(4).each_with_index do |announcement_group, index|
-          .item{class: index == 0 ? "active" : ""}
+          .item{class: index == 0 ? 'active' : ''}
             - announcement_group.reject(&:blank?).each do |announcement|
-              .col-md-3.news-item
-                %h2.title
-                  = link_to announcement.name, announcement
-                %p= announcement.summary || truncate(strip_tags(@markdown.render(announcement.markdown)), length: 140)
-                = link_to announcement do
-                  Read more
-                  = fa_icon 'chevron-right'
+              .col-6
+                .card
+                  .card-header= link_to announcement.name, announcement
+                  .card-body
+                    %p.card-text= announcement.summary || truncate(strip_tags(@markdown.render(announcement.markdown)), length: 140)
+                    = link_to announcement, class: 'card-link' do
+                      Read more
+                      = fa_icon 'chevron-right'
