--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,7 +22,7 @@
       = yield(:meta)
     - if content_for?(:description)
       %meta{name: "description", content: yield(:description)}
-  %body{:class => yield(:body_class), "data-no-turbolink" => yield(:disable_turbolinks), "data-model-name" => yield(:model_name), "data-current-user-id" => Current.user&.id, "data-params-id" => (params[:id] || yield(:model_id)) }
+  %body{"data-no-turbolink" => yield(:disable_turbolinks), "data-model-name" => yield(:model_name), "data-current-user-id" => Current.user&.id, "data-params-id" => (params[:id] || yield(:model_id)) }
     %a.skip.screen-reader-text{:href => "#content"} Skip to content
     - if Current.user&.staff?
       %div#support{"data-turbolinks-permanent" => true}
